<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorWhite">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:title="@string/app_name" />

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/toolbar"
        android:layout_alignLeft="@+id/toolbar"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="465dp"
        android:text="@string/textview1"
        android:textColor="@color/black"
        android:textSize="@dimen/some_text_size"
        android:textStyle="bold" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/textview1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="-455dp"
        android:layout_marginRight="16dp"
        android:background="@color/silver" />

    <TextView
        android:id="@+id/textview2"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_below="@+id/view1"
        android:layout_alignStart="@+id/toolbar"
        android:layout_alignLeft="@+id/toolbar"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="430dp"
        android:text="@string/textview2"
        android:textColor="@color/black"
        android:textSize="@dimen/some_text_size" />

    <TextView
        android:id="@+id/textview3"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/view1"
        android:layout_alignStart="@+id/toolbar"
        android:layout_alignLeft="@+id/toolbar"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="283dp"
        android:layout_marginLeft="283dp"

        android:layout_marginTop="-34dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="458dp"
        android:background="@drawable/owal"
        android:gravity="center"
        android:text="@string/owalchik"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/some_text_size" />

    <TextView
        android:id="@+id/textview4"
        android:layout_width="109dp"
        android:layout_height="18dp"
        android:layout_alignStart="@+id/toolbar"
        android:layout_alignLeft="@+id/toolbar"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="235dp"
        android:layout_marginLeft="235dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="428dp"
        android:gravity="right"
        android:text="@string/date"
        android:textColor="@color/silver"
        android:textSize="@dimen/some_text_size" />

    <TextView
        android:id="@+id/textview5"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/toolbar"
        android:layout_alignLeft="@+id/toolbar"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="238dp"
        android:layout_marginLeft="238dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="361dp"
        android:gravity="right"
        android:text="@string/date"
        android:textColor="@color/silver"
        android:textSize="@dimen/some_text_size" />

    <TextView
        android:id="@+id/textview6"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/toolbar"
        android:layout_alignLeft="@+id/toolbar"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="238dp"
        android:layout_marginLeft="238dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="394dp"
        android:gravity="right"
        android:text="@string/date"
        android:textColor="@color/silver"
        android:textSize="@dimen/some_text_size" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/textview4"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="-421dp"
        android:layout_marginRight="16dp"
        android:background="@color/silver" />

    <TextView
        android:id="@+id/textview7"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_below="@+id/view2"
        android:layout_alignStart="@+id/toolbar"
        android:layout_alignLeft="@+id/toolbar"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="394dp"
        android:text="@string/textview3"
        android:textColor="@color/black"
        android:textSize="@dimen/some_text_size" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/textview3"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="-387dp"
        android:layout_marginRight="16dp"
        android:background="@color/silver" />

    <TextView
        android:id="@+id/textview8"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@+id/view3"
        android:layout_alignStart="@+id/toolbar"
        android:layout_alignLeft="@+id/toolbar"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="359dp"
        android:text="@string/textview4"
        android:textColor="@color/black"
        android:textSize="@dimen/some_text_size" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/textview3"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="-353dp"
        android:layout_marginRight="16dp"
        android:background="@color/silver" />

    <TextView
        android:id="@+id/textview9"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_below="@+id/view4"
        android:layout_alignStart="@+id/toolbar"
        android:layout_alignLeft="@+id/toolbar"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="321dp"
        android:text="@string/textview5"
        android:textColor="@color/black"
        android:textSize="@dimen/some_text_size" />

    <TextView
        android:id="@+id/textview10"
        android:layout_width="173dp"
        android:layout_height="19dp"
        android:layout_below="@+id/view4"
        android:layout_alignStart="@+id/toolbar"
        android:layout_alignLeft="@+id/toolbar"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="171dp"
        android:layout_marginLeft="171dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="327dp"
        android:gravity="right"
        android:text="@string/city"
        android:textColor="@color/silver"
        android:textSize="@dimen/some_text_size" />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/textview10"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="-321dp"
        android:layout_marginRight="16dp"
        android:background="@color/silver" />

    <TextView
        android:id="@+id/textview11"
        android:layout_width="wrap_content"
        android:layout_height="87dp"
        android:layout_below="@+id/view4"
        android:layout_alignStart="@+id/toolbar"
        android:layout_alignLeft="@+id/toolbar"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="41dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="224dp"
        android:gravity=""
        android:text="@string/bigtextview"
        android:textColor="@color/black"
        android:textSize="@dimen/some_text_size" />

    <ImageView
        android:layout_width="183dp"
        android:layout_height="217dp"
        android:layout_alignStart="@+id/textview11"
        android:layout_alignLeft="@+id/textview11"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-13dp"
        android:layout_marginLeft="-13dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/honor" />

    <ImageView
        android:layout_width="173dp"
        android:layout_height="225dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="0dp"
        android:src="@drawable/honoruk" />


</RelativeLayout>